--- a/helm-charts/kubero/secrets.yaml.example
+++ b/helm-charts/kubero/secrets.yaml.example
@@ -5,7 +5,9 @@ metadata:
 type: Opaque
 stringData:
     KUBERO_WEBHOOK_SECRET: "mysecret_MAKE_IT_LONG"
-    KUBERO_USERS:
+    #UBERO_USERS: #DEPRECATED
+    KUBERO_ADMIN_USERNAME:
+    KUBERO_ADMIN_PASSWORD:
     KUBERO_SESSION_KEY:
     KUBECONFIG_BASE64:
     GITHUB_PERSONAL_ACCESS_TOKEN:
