--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -65,6 +65,18 @@ jobs:
           make docker-build
           make bundle-build
 
+      - name: Build operator.yaml
+        run: |
+          make bundle
+          mkdir -p deploy
+          ./bin/kustomize build config/default > deploy/operator.yaml
+
+      - name: Upload operator.yaml artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: operator-yaml
+          path: deploy/operator.yaml
+
 #      - name: Push image ghcr.io
 #        run: |
 #          make docker-push
